<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/bloodLy0"
        android:background="@drawable/bg_sub"
        android:paddingTop="20.0dip"
        android:paddingBottom="20.0dip"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="7.0dip"
        android:layout_marginBottom="15.0dip"
        android:layout_marginLeft="5.0dip"
        android:layout_marginRight="5.0dip">

        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="20.0dip"
            android:paddingRight="20.0dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20.0dip">
            <RelativeLayout
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="6.0">
                <TextView
                    android:textSize="20.0sp"
                    android:gravity="center"
                    android:id="@+id/blood_sugar_tv_date"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_input_date"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    />
                <ImageView
                    android:layout_gravity="bottom"
                    android:background="@drawable/bg_select"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/blood_sugar_tv_date"
                    android:contentDescription="@string/etc" />
            </RelativeLayout>
            <View
                android:layout_width="5.0dip"
                android:layout_height="1.0dip" />
            <RelativeLayout
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="4.0">
                <TextView
                    android:textSize="20.0sp"
                    android:gravity="center"
                    android:id="@+id/blood_sugar_tv_time"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_input_time"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true" />
                <ImageView
                    android:layout_gravity="bottom"
                    android:background="@drawable/bg_select"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/blood_sugar_tv_time"
                    android:contentDescription="@string/etc" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="20.0dip"
            android:paddingRight="20.0dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0">
                <EditText
                    android:textSize="30.0sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:id="@+id/blood_sugar_edit_value"
                    android:background="#00000000"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2.0dip"
                    android:maxLines="1"
                    android:maxLength="5"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionDone" />
                <ImageView
                    android:layout_gravity="bottom"
                    android:background="@drawable/bg_input"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/blood_sugar_edit_value"
                    android:contentDescription="@string/etc" />
            </RelativeLayout>
            <TextView
                android:textSize="15.0sp"
                android:textColor="#ff646464"
                android:gravity="center"
                android:layout_gravity="bottom"
                android:id="@+id/blood_sugar_tv_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginBottom="2.0dip"
                android:text="@string/unit_blood_sugar_en" />
        </LinearLayout>

        <ImageView
            android:background="@drawable/bg_divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2.0dip"
            android:layout_marginTop="25.0dip"
            android:layout_marginRight="2.0dip"
            android:layout_marginBottom="20.0dip"
            android:contentDescription="@string/etc" />

        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:id="@+id/blood_sugar_ll_after"
                android:background="@drawable/bg_type"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0">
                <ImageButton
                    android:layout_gravity="center"
                    android:id="@+id/blood_sugar_ibtn_after"
                    android:background="#00000000"
                    android:layout_width="30.0dip"
                    android:layout_height="30.0dip"
                    android:src="@drawable/ic_after"
                    android:contentDescription="@string/etc"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"/>
                <TextView
                    android:textSize="10.0dip"
                    android:textStyle="bold"
                    android:textColor="#ff000000"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:id="@+id/blood_sugar_tv_after"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1.0dip"
                    android:text="@string/blood_sugar_eat_after"
                    />
            </LinearLayout>
            <View
                android:background="#00000000"
                android:layout_width="5.0dip"
                android:layout_height="1.0dip" />
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:id="@+id/blood_sugar_ll_before"
                android:background="@drawable/bg_type"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0">
                <ImageButton
                    android:layout_gravity="center"
                    android:id="@+id/blood_sugar_ibtn_before"
                    android:background="#00000000"
                    android:layout_width="30.0dip"
                    android:layout_height="30.0dip"
                    android:src="@drawable/ic_before"
                    android:contentDescription="@string/etc"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"/>
                <TextView
                    android:textSize="10.0dip"
                    android:textStyle="bold"
                    android:textColor="#ff000000"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:id="@+id/blood_sugar_tv_before"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1.0dip"
                    android:text="@string/blood_sugar_eat_before" />
            </LinearLayout>
            <View
                android:background="#00000000"
                android:layout_width="5.0dip"
                android:layout_height="1.0dip" />
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:id="@+id/blood_sugar_ll_fasting"
                android:background="@drawable/bg_type"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0">

                <ImageButton
                    android:layout_gravity="center"
                    android:id="@+id/blood_sugar_ibtn_fasting"
                    android:background="#00000000"
                    android:layout_width="30dip"
                    android:layout_height="30dip"
                    android:src="@drawable/ic_fasting"
                    android:contentDescription="@string/etc"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"/>
                <TextView
                    android:textSize="10.0dip"
                    android:textStyle="bold"
                    android:textColor="#ff000000"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:id="@+id/blood_sugar_tv_fasting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1.0dip"
                    android:text="@string/blood_sugar_eat_fasting" />
            </LinearLayout>
            <View
                android:background="#00000000"
                android:layout_width="5.0dip"
                android:layout_height="1.0dip" />
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:id="@+id/blood_sugar_ll_cs"
                android:background="@drawable/bg_type"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0">
                <ImageButton
                    android:layout_gravity="center"
                    android:id="@+id/blood_sugar_ibtn_cs"
                    android:background="#00000000"
                    android:layout_width="30.0dip"
                    android:layout_height="30.0dip"
                    android:src="@drawable/ic_cs"
                    android:contentDescription="@string/etc"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"/>
                <TextView
                    android:textSize="10.0dip"
                    android:textStyle="bold"
                    android:textColor="#ff000000"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:id="@+id/blood_sugar_tv_cs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1.0dip"
                    android:text="@string/blood_sugar_eat_cs" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginTop="10.0dip"
            android:layout_marginRight="10.0dip">
            <TextView
                android:textColor="@color/text_color_main_tab_normal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/fasting_hint" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20.0dip"
            android:layout_marginTop="10.0dip"
            android:layout_marginRight="20.0dip">
            <Button android:textSize="19.0sp"
                android:textStyle="bold"
                android:textColor="#ff5d5d5d"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/blood_sugar_btn_add"
                android:background="@drawable/btn_type4"
                android:padding="1.0dip"
                android:layout_width="fill_parent"
                android:layout_height="45.0dip"
                android:text="@string/btn_add" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
